# CrewAi-Projects

blog_1/: pyproject.toml
blog_1/src/blog_1/: __init__.py  main.py
blog_gen/: pyproject.toml
blog_gen/src/blog/: __init__.py  blogflow.py
